--- a/myDaisyCloud/mysite/daisycloud/templates/getToTry.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/getToTry.html
@@ -33,7 +33,7 @@
             </div>
         </div>
       </div>
-      <div style="margin-top:35px;">
+      <!--div style="margin-top:35px;">
         <h3 style="color:rgb(126, 194, 119);">Get Openstack ISO</h3>
         <div  class="downloadbox">
             <div style="font-size:22px;">
@@ -45,12 +45,12 @@
                 </span>
             </p>
         </div>
-      </div>
+      </div-->
       <div style="margin-top:35px;">
         <h3 style="color:rgb(126, 194, 119);">Get OS ISO</h3>
         <div class="downloadbox">
             <div style="font-size:22px;">
-                Ubuntu-community-1.0
+                centos7.0
             </div>
             <p>
                 <span class="badge" style="background:rgb(157, 198, 132) none repeat scroll 0% 0%;">
