support download centos7 iso files

--- a/myDaisyCloud/mysite/daisycloud/templates/getToTry.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/getToTry.html
@@ -41,7 +41,9 @@
             </div>
             <p>
                 <span class="badge" style="background:rgb(157, 198, 132) none repeat scroll 0% 0%;">
-                    get&nbsp;&nbsp; Release
+                    <a href="./static/files/CentOS-7-x86_64-Minimum.iso">
+                        get&nbsp;&nbsp; Release
+                    </a>
                 </span>
             </p>
         </div>
